--- a/styles/write.less
+++ b/styles/write.less
@@ -1,10 +1,9 @@
-// The ui-variables file is provided by base themes provided by Atom.
-//
-// See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
-// for a full listing of what's available.
 @import "ui-variables";
+
 @import (less) "../node_modules/medium-editor/dist/css/medium-editor.min.css";
 @import (less) "../node_modules/medium-editor/dist/css/themes/bootstrap.min.css";
+
+@import "./_variables";
 
 .atom-writer {
   width: 100vw;
@@ -12,19 +11,48 @@
   flex-direction: column;
   justify-content: center;
   overflow: scroll;
+  font-size: 14px;
 }
 
 .atom-writer--editor {
-  width: 60%;
+  width: 80%;
   height: 60%;
   margin: 0 auto;
+  max-width: 800px;
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  h2 {
+    font-size: 1.6em;
+  }
+
+  h3 {
+    font-size: 1.4em;
+  }
+
+  h4 {
+    font-size: 1.2em;
+  }
+
+  h1, h2, h3, h4, p {
+    padding: 0;
+    margin: 0 0 1.5em;
+  }
 }
 
 .atom-writer--options {
   position: fixed;
   bottom: 50px;
   right: 50px;
-  width: 50px;
-  height: 50px;
   background: orange;
+
+  input {
+    color: black;
+  }
+
+  .options-menu {
+    display: none;
+  }
 }
